100% width on weight input field to fix shifting of the header

--- a/src/css/exercise.css
+++ b/src/css/exercise.css
@@ -106,6 +106,7 @@
 
 .weight-input {
   padding: 5px;
+  width: 100%;
   background-color: #ededed;
   border-left: none;
   border-top: none;
